[gd_scene load_steps=3 format=3 uid="uid://7ymskiiciotk"]

[ext_resource type="Script" uid="uid://do8tpkdgv8xih" path="res://Scenes/PlayerInventory.gd" id="1"]
[ext_resource type="FontFile" uid="uid://g26d25jngm6v" path="res://UI/JetBrainsMono[wght].ttf" id="2_sr02p"]

[node name="PlayerInventory" type="Control"]
custom_minimum_size = Vector2(2560, 1440)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(2560, 1440)
layout_mode = 0
offset_right = 2560.0
offset_bottom = 1440.0

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(2560, 1440)
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="LeftPane" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(1050, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="SearchRow" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LeftPane"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchBox" type="LineEdit" parent="MarginContainer/HBoxContainer/LeftPane/SearchRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search..."

[node name="ClearBtn" type="Button" parent="MarginContainer/HBoxContainer/LeftPane/SearchRow"]
layout_mode = 2
text = "Clear"

[node name="FilterRow" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LeftPane"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TypeFilter" type="OptionButton" parent="MarginContainer/HBoxContainer/LeftPane/FilterRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RarityFilter" type="OptionButton" parent="MarginContainer/HBoxContainer/LeftPane/FilterRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OnlyOwned" type="CheckBox" parent="MarginContainer/HBoxContainer/LeftPane"]
layout_mode = 2
text = "Qty > 0"

[node name="List" type="ItemList" parent="MarginContainer/HBoxContainer/LeftPane"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_sr02p")

[node name="RightPane" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer/RightPane"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer/RightPane/Icon"]
layout_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/RightPane"]
layout_mode = 2
text = "Name"

[node name="QtyLabel" type="Label" parent="MarginContainer/HBoxContainer/RightPane"]
layout_mode = 2
text = "Quantity: 0"

[node name="TypeLabel" type="Label" parent="MarginContainer/HBoxContainer/RightPane"]
layout_mode = 2
text = "Type:"

[node name="RarityLabel" type="Label" parent="MarginContainer/HBoxContainer/RightPane"]
layout_mode = 2
text = "Rarity:"

[node name="DescLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/RightPane"]
layout_mode = 2
size_flags_vertical = 3

[node name="GiveRow" type="HBoxContainer" parent="MarginContainer/HBoxContainer/RightPane"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="PlayerDropdown" type="OptionButton" parent="MarginContainer/HBoxContainer/RightPane/GiveRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GiveAmount" type="SpinBox" parent="MarginContainer/HBoxContainer/RightPane/GiveRow"]
layout_mode = 2
min_value = 1.0
page = 1.0
value = 1.0

[node name="GiveButton" type="Button" parent="MarginContainer/HBoxContainer/RightPane/GiveRow"]
layout_mode = 2
text = "Give Items"

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/RightPane"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 2487.0
offset_top = 24.0
offset_right = 2530.0
offset_bottom = 84.0
text = "X"

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
